unpackaged/main/default/objects/Annual_Match__c/Annual_Match__c.object-meta.xml
<CustomObject>
    <description>Annual Challenge Match record and orginiating donations related to Challenge Match</description>
    <label>Annual Challenge Match</label>
    <nameField>
        <displayFormat>CMAM-{00000}</displayFormat>
        <label>Annual Match Record ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Annual Challenge Matches</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>