unpackaged/main/default/objects/Annual_Match__c/fields/Amount_Matched_by_Donors__c.field-meta.xml
<CustomField>
    <fullName>Amount_Matched_by_Donors__c</fullName>
    <formula>IF(

AND (
OR(ISPICKVAL(Status__c, "Completed - Met"),ISPICKVAL(Status__c, "Active")),
(OR
(ISPICKVAL(Challenge_Donation__r.StageName, "Received"), ISPICKVAL(Challenge_Donation__r.StageName, "Received as Unconditional Pledge"),ISPICKVAL(Challenge_Donation__r.StageName, "Received as Conditional Pledge"))
)

),
(CASE(Challenge_Match__r.Match_Type__c ,

"Up to max", ( IF (((Raised_to_Date_for_Match__c* Challenge_Match__r.Match_Percent__c
) &lt; Maximum_Amount__c) ,(Raised_to_Date_for_Match__c* Challenge_Match__r.Match_Percent__c),Maximum_Amount__c )),
"All or nothing", ( Raised_to_Date_for_Match__c * Challenge_Match__r.Match_Percent__c),
"As much as possible", ( Raised_to_Date_for_Match__c * Challenge_Match__r.Match_Percent__c),0


)),0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount Matched by Donor</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>