unpackaged/main/default/objects/Annual_Match__c/fields/Amount_Needed_to_Unlock_Match__c.field-meta.xml
<CustomField>
    <fullName>Amount_Needed_to_Unlock_Match__c</fullName>
    <formula>IF (ISPICKVAL( Challenge_Match__r.Match_Type__c, "All or nothing"), Threshold_Amount__c ,null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>If the Match Type equals "All or nothing", this field will hold the value of the Threshold Amount. Otherwise, it will be blank.</inlineHelpText>
    <label>Amount Needed to Unlock Match</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>