unpackaged/main/default/objects/Annual_Match__c/fields/Challenge_Donation_Last_Modified_Date__c.field-meta.xml
<CustomField>
    <fullName>Challenge_Donation_Last_Modified_Date__c</fullName>
    <label>Challenge Donation Last Modified Date</label>
    <type>DateTime</type>
</CustomField>