unpackaged/main/default/objects/Annual_Match__c/fields/Challenge_Match__c.field-meta.xml
<CustomField>
    <fullName>Challenge_Match__c</fullName>
    <description>Challenge Match related to annual match record.</description>
    <inlineHelpText>Challenge Match related to annual match record.</inlineHelpText>
    <label>Challenge Match</label>
    <referenceTo>Challenge_Match__c</referenceTo>
    <relationshipLabel>Annual Matches</relationshipLabel>
    <relationshipName>Annual_Matches</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>