unpackaged/main/default/objects/Annual_Match__c/fields/Challenge_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Challenge_Start_Date__c</fullName>
    <label>Challenge Start Date</label>
    <type>Date</type>
</CustomField>