unpackaged/main/default/objects/Annual_Match__c/fields/Donor__c.field-meta.xml
<CustomField>
    <fullName>Donor__c</fullName>
    <formula>Challenge_Match__r.Donor__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Donor</label>
    <type>Text</type>
</CustomField>