unpackaged/main/default/objects/Annual_Match__c/fields/Match_Percent_Formula__c.field-meta.xml
<CustomField>
    <fullName>Match_Percent_Formula__c</fullName>
    <formula>Challenge_Match__r.Match_Percent__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Match Percent of the linked Challenge Match</inlineHelpText>
    <label>Match Percent</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>