unpackaged/main/default/objects/Annual_Match__c/fields/Match_Type_Formula__c.field-meta.xml
<CustomField>
    <fullName>Match_Type_Formula__c</fullName>
    <formula>text( Challenge_Match__r.Match_Type__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Match Type of the linked Challenge Match</inlineHelpText>
    <label>Match Type</label>
    <type>Text</type>
</CustomField>