unpackaged/main/default/objects/Annual_Match__c/fields/Maximum_Amount__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Amount__c</fullName>
    <formula>IF (ISPICKVAL(Challenge_Match__r.Match_Type__c , "Up to max"), Threshold_Amount__c ,null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>If the Match Type equals "Up to max", this field will hold the value of the Threshold Amount. Otherwise, it will be blank.</inlineHelpText>
    <label>Maximum Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>