unpackaged/main/default/objects/Annual_Match__c/fields/Portfolio_Manager__c.field-meta.xml
<CustomField>
    <fullName>Portfolio_Manager__c</fullName>
    <formula>Challenge_Donation__r.Portfolio_Manager__r.FirstName &amp; " " &amp; Challenge_Donation__r.Portfolio_Manager__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Portfolio Manager</label>
    <type>Text</type>
</CustomField>