unpackaged/main/default/objects/Annual_Match__c/fields/Purpose__c.field-meta.xml
<CustomField>
    <fullName>Purpose__c</fullName>
    <formula>Challenge_Match__r.Purpose__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Purpose</label>
    <type>Text</type>
</CustomField>