unpackaged/main/default/objects/Annual_Match__c/fields/Raised_to_Date_for_Match__c.field-meta.xml
<CustomField>
    <fullName>Raised_to_Date_for_Match__c</fullName>
    <description>Total qualifying amount of qualifying donations related to challenge match</description>
    <inlineHelpText>Total qualifying amount of qualifying donations related to challenge match</inlineHelpText>
    <label>Raised to Date for Match</label>
    <summarizedField>Qualifying_Donation__c.Qualifying_Amount__c</summarizedField>
    <summaryForeignKey>Qualifying_Donation__c.Annual_Match__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>