unpackaged/main/default/objects/Annual_Match__c/fields/Raised_to_Date_for_Match_numeric__c.field-meta.xml
<CustomField>
    <fullName>Raised_to_Date_for_Match_numeric__c</fullName>
    <label>Raised to Date for Match($)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>