unpackaged/main/default/objects/Annual_Match__c/fields/Target_Amount__c.field-meta.xml
<CustomField>
    <fullName>Target_Amount__c</fullName>
    <formula>IF (ISPICKVAL( Challenge_Match__r.Match_Type__c , "As much as possible"), Threshold_Amount__c ,null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>If the Match Type equals "As much as possible", this field will hold the value of the Threshold Amount. Otherwise, it will be blank.</inlineHelpText>
    <label>Target Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>