unpackaged/main/default/objects/Annual_Match__c/fields/Threshold_Amount__c.field-meta.xml
<CustomField>
    <fullName>Threshold_Amount__c</fullName>
    <description>Challenge match threshold amount</description>
    <label>Threshold Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>