unpackaged/main/default/objects/Annual_Match__c/fields/Total_Raised_by_Challenge_Match__c.field-meta.xml
<CustomField>
    <fullName>Total_Raised_by_Challenge_Match__c</fullName>
    <formula>Raised_to_Date_for_Match_numeric__c+ Amount_Matched_by_Donor__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Raised by Challenge Match</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>