unpackaged/main/default/objects/Annual_Match__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Annual_Match_Name__c</columns>
    <columns>Challenge_Donation__c</columns>
    <columns>Challenge_Start_Date__c</columns>
    <columns>Challenge_End_Date__c</columns>
    <columns>Challenge_Match__c</columns>
    <columns>Donor__c</columns>
    <columns>Criteria__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>